--- a/dockerfile/Dockerfile
+++ b/dockerfile/Dockerfile
@@ -5,4 +5,4 @@ MAINTAINER wanght && wanght@gooalgene.com
 ## INSTALL R
 RUN yum install epel-release -y && yum install R -y && yum clean all
 ## INSTALL R PACKAGES
-RUN Rscript -e 'source("http://bioconductor.org/biocLite.R")' -e '("ChAMP")'
+RUN Rscript -e 'source("http://bioconductor.org/biocLite.R")' -e 'biocLite("ChAMP")'
